# api_rest_actix

./: .env.dist  .gitignore  Cargo.toml  Dockerfile
src/: main.rs  middlewares.rs  router.rs  server.rs  services.rs  utils.rs
src/middlewares/: handle_rights.rs
src/router/: jwt.rs  trips.rs
src/services/: database.rs  env.rs  logger.rs
src/utils/: constants.rs  crud.rs  errors.rs
