[package]
name = "actix_rest_poc"
version = "0.1.0"
authors = ["Charles <charles.capelli@qonfucius.team>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-http = "2.0.0-alpha.2"
dotenv = "0.15.0"
log = "0.4.8"
log4rs = "0.11.0"
failure = "0.1.7"
